first pass at changes

--- a/phone/index.html
+++ b/phone/index.html
@@ -11996,7 +11996,7 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
       <!-- /m_editable -->
      </div>
      <!-- m_editable region-id="editable-static-tag-U7672-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u7672-5" href="../assets/20160720083151201-(1).pdf" data-href="upload:U7665" data-muse-uid="U7672" data-muse-type="txt_frame"><!-- content --><p>We are a <span id="u7672-2">501(c)(3) Certified Organization</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u7672-5" href="../assets/irs.pdf" data-href="upload:U7665" data-muse-uid="U7672" data-muse-type="txt_frame"><!-- content --><p>We are a <span id="u7672-2">501(c)(3) Certified Organization</span></p></a>
      <!-- /m_editable -->
     </div>
     <div class="verticalspacer" data-offset-top="7251" data-content-above-spacer="7251" data-content-below-spacer="0"></div>
