--- a/index.html
+++ b/index.html
@@ -26503,6 +26503,21 @@ margin-top: -0px !important;
     padding-left: 100px !important;
 }
 
+.masthead-regular p{
+  font-size: 110px;
+  color: #ffffff;
+  line-height: 145px;
+}
+
+.masthead-highlight{
+  color: #37A3C6;
+  font-size: 135px;
+}
+
+.masthead-special {
+  font-size: 30px;
+}
+
  </style>  
    
 	
@@ -26614,12 +26629,14 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
     </div>
     <div class="clearfix colelem" id="pu5794-4"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U5794-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix grpelem" id="u5794-4" data-muse-uid="U5794" data-muse-type="txt_frame"><!-- content -->
-      <p>CONNECTED</p>
+     <div class=" masthead-regular clearfix grpelem" id="u5794-4" data-muse-uid="U5794" data-muse-type="txt_frame"><!-- content -->
+      <p>Not all <span class="masthead-highlight">heroes<span></p>
+      <p>Wear capes</p>
+      <p>some wear</p>
+      <p><span class="masthead-highlight">bracelets</span></p>
      </div>
      <!-- /m_editable -->
-     <img class="grpelem" id="u5800-4" alt="We are all " width="858" height="84" src="images/u5800-4.png?crc=4272116292"/><!-- rasterized frame -->
-     <img class="grpelem" id="u5833-4" alt="but sadly there's a huge problem..." width="858" height="74" src="images/u5833-4.png?crc=3882886660"/><!-- rasterized frame -->
+     <!-- rasterized frame -->
     </div>
     <!-- m_editable region-id="editable-static-tag-U5206-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext anim_swing rounded-corners clearfix ose_pre_init colelem" id="u5206-5" href="index.html#discover" data-href="anchor:U68:U6346" data-muse-uid="U5206" data-muse-type="txt_frame"><!-- content --><p id="u5206-3"><span id="u5206">Discover&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&gt;</p></a>
