--- a/phone/index.html
+++ b/phone/index.html
@@ -11592,6 +11592,20 @@ margin-top: -0px !important;
     padding-left: 100px !important;
 }
 
+.masthead-regular p{
+  font-size: 36px;
+  line-height: 56px;
+}
+
+.masthead-highlight{
+  color: #37A3C6;
+  font-size: 48px;
+}
+
+.masthead-special {
+  font-size: 30px;
+}
+
  </style>  
    
 	
@@ -11670,14 +11684,19 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
       <div id="u6733"><!-- simple frame --></div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U6734-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext anim_swing rounded-corners clearfix ose_pre_init grpelem" id="u6734-5" href="index.html#discover" data-href="anchor:U815:U6742" data-muse-uid="U6734" data-muse-type="txt_frame"><!-- content --><p id="u6734-3"><span id="u6734">Discover&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&gt;</p></a>
+     
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U6735-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix grpelem" id="u6735-4" data-muse-uid="U6735" data-muse-type="txt_frame"><p>Connected</p>
+     <div class="masthead-regular clearfix grpelem" id="u6735-4" data-muse-uid="U6735" data-muse-type="txt_frame">
+      <p>Not all <span class="masthead-highlight">heroes<span></p>
+      <p>Wear capes</p>
+      <p>some wear</p>
+      <p><span class="masthead-highlight">bracelets</span></p>
      </div>
+     <a class="nonblock nontext anim_swing rounded-corners clearfix ose_pre_init grpelem" id="u6734-5" href="index.html#discover" data-href="anchor:U815:U6742" data-muse-uid="U6734" data-muse-type="txt_frame"><!-- content --><p id="u6734-3"><span id="u6734">Discover&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>&gt;</p></a>
      <!-- /m_editable -->
-     <img class="grpelem" id="u6736-4" alt="We are all " width="364" height="74" src="../images/u6736-4.png?crc=22140311"/><!-- rasterized frame -->
-     <img class="grpelem" id="u6737-4" alt="but sadly there's a huge problem..." width="364" height="74" src="../images/u6737-4.png?crc=263645026"/><!-- rasterized frame -->
+     <!-- <img class="grpelem" id="u6736-4" alt="We are all " width="364" height="74" src="../images/u6736-4.png?crc=22140311"/><!-- rasterized frame --> -->
+     <!-- <img class="grpelem" id="u6737-4" alt="but sadly there's a huge problem..." width="364" height="74" src="../images/u6737-4.png?crc=263645026"/><!-- rasterized frame --> -->
      <div class="grpelem" id="u6740"><!-- simple frame --></div>
      <a class="anchor_item grpelem" id="discover"></a>
      <div class="browser_width grpelem" id="u6817-bw">
