--- a/index.html
+++ b/index.html
@@ -25678,7 +25678,6 @@ margin-top: -0px !important;
 }
 
  </style>  
-   
 	
 
 
@@ -26504,14 +26503,15 @@ margin-top: -0px !important;
 }
 
 .masthead-regular p{
-  font-size: 110px;
+  font-size: 66px;
   color: #ffffff;
-  line-height: 145px;
+  line-height: 120px;
 }
 
 .masthead-highlight{
   color: #37A3C6;
-  font-size: 135px;
+  font-size: 120px;
+  font-weight: bold;
 }
 
 .masthead-special {
@@ -26630,10 +26630,10 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
     <div class="clearfix colelem" id="pu5794-4"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U5794-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
      <div class=" masthead-regular clearfix grpelem" id="u5794-4" data-muse-uid="U5794" data-muse-type="txt_frame"><!-- content -->
-      <p>Not all <span class="masthead-highlight">heroes<span></p>
-      <p>Wear capes</p>
+      <p>not all <span class="masthead-highlight">HEROES<span></p>
+      <p>wear capes</p>
       <p>some wear</p>
-      <p><span class="masthead-highlight">bracelets</span></p>
+      <p><span class="masthead-highlight">BRACELETS</span></p>
      </div>
      <!-- /m_editable -->
      <!-- rasterized frame -->
