--- a/phone/index.html
+++ b/phone/index.html
@@ -11598,8 +11598,9 @@ margin-top: -0px !important;
 }
 
 .masthead-highlight{
-  color: #37A3C6;
-  font-size: 48px;
+  /*color: #37A3C6;*/
+  font-size: 52px;
+  font-weight: bold;
 }
 
 .masthead-special {
@@ -11707,9 +11708,7 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
        <div class="position_content" id="u7521_position_content">
         <!-- m_editable region-id="editable-static-tag-U6741-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link" -->
         <div class="clearfix colelem" id="u6741-8" data-muse-uid="U6741" data-muse-type="txt_frame"><!-- content -->
-         <p id="u6741-2">ABOUT US:</p>
-         <p id="u6741-5"><br>Embracelets Connect is a non-profit organization that provides light to a place of darkness through education, sustainability, and connectedness for the forgotten children of the world.</p>
-         <p id="u6741-6">&nbsp;</p>
+         
         </div>
         <!-- /m_editable -->
         <div class="museBGSize colelem" id="u7515"><!-- simple frame --></div>
